klass-model-converters/klass-compiler/src/test/resources/cool/klass/model/converter/compiler/error/property/TransientClassWtihIdPropertyErrorTest.klass
package example

class AbstractSuperClass
    abstract
{
    string: String;
}

class ConcreteSubClass
    extends AbstractSuperClass
    transient
{
    key: Long key id;
}
